# Legal-Compliance-RAG-Assistant

./: .gitignore  LICENSE  README.md  main.py  project1.py  pyproject.toml
